v1.0.0/modules/schema/pages/class/Organisation.adoc
= `Organisation`
:toclevels: 4


+++Organisation that might have roles as utility, contractor, supplier, manufacturer, customer, etc.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Organisation`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Organisation`*
 *** xref::class/ControlAreaOperator.adoc[`ControlAreaOperator`]
 *** xref::class/CustomerConsumer.adoc[`CustomerConsumer`]
 *** xref::class/GenerationProvider.adoc[`GenerationProvider`]
 *** xref::class/MarketParticipant.adoc[`MarketParticipant`]
 *** xref::class/Marketer.adoc[`Marketer`]
 *** xref::class/ParentOrganization.adoc[`ParentOrganization`]
 *** xref::class/TransmissionProvider.adoc[`TransmissionProvider`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Organisation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



StreetAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



StreetAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ParentOrganization {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OrganisationRole {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingPlanRequest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Organisation -> ElectronicAddress: electronicAddress


Organisation -> TelephoneNumber: phone1


Organisation -> TelephoneNumber: phone2


Organisation -> StreetAddress: postalAddress


Organisation -> StreetAddress: streetAddress


Organisation -> ParentOrganization: ParentOrganisation


Organisation -> OrganisationRole: Roles


Organisation -> SwitchingPlanRequest: SwitchingPlanRequest


Organisation -> DiagramObject: DiagramObjects


Organisation -> InstanceSet: InstanceSet


Organisation -> Name: Names


Organisation -> ChangeSetMember: PropertiesCIMDataObject


Organisation -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ParentOrganisation,`ParentOrganisation`>>
| 0..1
| xref::class/ParentOrganization.adoc[`ParentOrganization`]
| +++Parent organisation of this organisation.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<phone1,`phone1`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Phone number.+++

| <<phone2,`phone2`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Additional phone number.+++

| <<postalAddress,`postalAddress`>>
| 0..1
| xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Postal address, potentially different than 'streetAddress' (e.g., another city).+++

| <<streetAddress,`streetAddress`>>
| 0..1
| xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Street address.+++

| <<Roles,`Roles`>>
| 0..*
| xref::class/OrganisationRole.adoc[`OrganisationRole`]
| +++All roles of this organisation.+++

| <<SwitchingPlanRequest,`SwitchingPlanRequest`>>
| 0..*
| xref::class/SwitchingPlanRequest.adoc[`SwitchingPlanRequest`]
| +++The switching plan requested by the requesting organization+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ParentOrganisation]
=== `ParentOrganisation`
+++Parent organisation of this organisation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.ParentOrganisation`
| Cardinality
| 0..1
| Type
| xref::class/ParentOrganization.adoc[`ParentOrganization`]


|===

//[discrete]
[#phone1]
=== `phone1`
+++Phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.phone1`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]


|===

//[discrete]
[#phone2]
=== `phone2`
+++Additional phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.phone2`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]


|===

//[discrete]
[#postalAddress]
=== `postalAddress`
+++Postal address, potentially different than 'streetAddress' (e.g., another city).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.postalAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Roles]
=== `Roles`
+++All roles of this organisation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.Roles`
| Cardinality
| 0..*
| Type
| xref::class/OrganisationRole.adoc[`OrganisationRole`]


|===

//[discrete]
[#streetAddress]
=== `streetAddress`
+++Street address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.streetAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]


|===

//[discrete]
[#SwitchingPlanRequest]
=== `SwitchingPlanRequest`
+++The switching plan requested by the requesting organization+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.SwitchingPlanRequest`
| Cardinality
| 0..*
| Type
| xref::class/SwitchingPlanRequest.adoc[`SwitchingPlanRequest`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


